Organizing test files, adding tests, further changes. Project8 "function" tests currently commented, WIP.